2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/AbstractXYItemLabelGenerator.java
    (nullXString): Removed,
    (getNullYString): New method,
    (createItemArray): Removed redundant code,
    (equals): Check nullYString field,
    (hashCode): Implemented.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java:
    Renamed XYSplineRenderer.java.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeriesCollection.java
    (getSeries): Changed argument from String to Comparable.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Millisecond.java
    (compareTo): Added handling for general RegularTimePeriod.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimePeriodValue.java
    (toString): New method override,
    * source/org/jfree/data/time/TimePeriodValues.java
    (updateBounds): Update maxMiddleIndex correctly.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Week.java
    (Week(Date, TimeZone)): Hand on the zone.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/SimpleTimePeriod.java
    (start): Changed from Date to long,
    (end): Likewise,
    (getStartMillis): New method,
    (getEndMillis): Likewise,
    (getStart): Returns new date instance,
    (getEnd): Likewise.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1864222:
    * source/org/jfree/data/time/TimeSeries.java
    (createCopy(RegularTimePeriod, RegularTimePeriod)): Handle empty range.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/FixedMillisecond.java
    (time): Changed from Date to long.
